Fixed horizontal scroll-bar

--- a/styles/App.css
+++ b/styles/App.css
@@ -14,7 +14,7 @@
   --desktopMin: 1500px;
 }
 
-html {
+html, body {
   font-size: 112.5%;
   width: 100%;
 }
@@ -128,6 +128,7 @@ li {
 }
 
 .char-image {
+  align-self: start;
   display: inline-block;
   margin-top: 0.5rem;
   width: 84.5px;
